# Caitsidhe-V-SoC

./: CMakeLists.txt  README.md
src/: main.cpp
src/common/: types.h  utils.h
src/core/: alu.h  control.h  cpu.h  genImm.h  pipeline_regs.h  regfile.h
src/memory/: bus.h  ram.h
src/peripherals/: uart.h
